--- a/treeprunning/package.json
+++ b/treeprunning/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "bootstrap-vue-3": "^0.5.1",
